[workspace]
resolver = "2"
members = ["qpdf-sys", "qpdf-rs"]

[workspace.package]
version = "0.3.4"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
edition = "2021"
repository = "https://github.com/ancwrd1/qpdf-rs"
documentation = "https://docs.rs/qpdf"
readme = "README.md"
keywords = ["PDF", "QPDF"]
license = "MIT/Apache-2.0"
