[package]
name = "qpdf"
version = "0.1.3"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Rust bindings to QPDF C++ library"
license = "MIT/Apache-2.0"
repository = "https://github.com/ancwrd1/qpdf-rs"
documentation = "https://docs.rs/qpdf"
readme = "README.md"
keywords = ["PDF", "QPDF"]
edition = "2021"

[dependencies]
qpdf-sys = { path = "../qpdf-sys", version = "0.1" }
libc = "0.2"
