[package]
name = "qpdf"
description = "Rust bindings to QPDF C++ library"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
qpdf-sys = { path = "../qpdf-sys", version = "0.3" }
libc = "0.2"

[features]
vendored = ["qpdf-sys/vendored"]
legacy = []

[package.metadata.docs.rs]
all-features = true
