[package]
name = "qpdf-sys"
version = "0.1.5"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Rust bindings to QPDF C++ library via FFI and bindgen"
license = "MIT/Apache-2.0"
repository = "https://github.com/ancwrd1/qpdf-rs"
documentation = "https://docs.rs/qpdf"
readme = "README.md"
keywords = ["PDF", "QPDF"]
edition = "2021"
exclude = [
    'qpdf/qpdf/*',
    'qpdf/appimage/*',
    'qpdf/examples/*',
    'qpdf/fuzz/*',
    'qpdf/libtests/*'
]

[build-dependencies]
cc = { version = "1",  features = ["parallel"] }
bindgen = "0.65"
